# the-firm

./: .gitignore  AGENTS.md  CLAUDE.md  LAWYERS.md  README.md  pyproject.toml
.agents/agents/: tyagi.md
.agents/skills/the-firm/: SKILL.md
.agents/skills/the-firm/agents/: jessica.md  mike.md  tyagi.md
.claude/agents/: mike.md  tyagi.md
.claude/skills/the-firm/: SKILL.md
.claude/skills/the-firm/agents/: jessica.md  mike.md  tyagi.md
firm/: __init__.py  agents_sync.py  caps.py  cast.py  citations.py  cli.py  courts.py  export.py  handoff.py  home.py  legs.py  matter.py  office.py  pack.py  personas.py  progress.py  prompts.py  record.py  room.py  runtime.py  scaffold.py  setup.py  sources_index.py  state.py  tokens.py
personas/: harvey.md  jessica.md  mike.md  tyagi.md
templates/: brief.md  decision-log.md  harvey-context.md
templates/briefing-pack/: argument-notes.html  briefing-memo.html  client-briefing-2pp.html  reference-table.html  render.js  styles.css
templates/courts/default/: draft.css  header.md
tests/: test_firm.py  test_matter.py  test_sources_index.py
tests/fixtures/mini-case/: order.txt
