[project]
name = "the-firm"
version = "0.1.0"
description = "Harvey / Tyagi / Mike / Jessica — office room legal sparring"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
firm = "firm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["firm"]

[tool.hatch.build.targets.wheel.force-include]
"personas" = "firm/data/personas"
"templates" = "firm/data/templates"
".claude/skills" = "firm/data/skills"
".agents/skills" = "firm/data/codex-skills"

[dependency-groups]
dev = ["pytest>=8.0"]
